# yzix

./: .gitignore  Cargo.toml  README.md
crates/example-bootstrap/: Cargo.toml
crates/example-bootstrap/src/: main.rs  mkDerivation-builder.sh
crates/example-bootstrap/src/stage0/: objs.kdl
crates/example-fetch2store/: Cargo.toml
crates/example-fetch2store/src/: main.rs
crates/example-rungraph/: Cargo.toml
crates/example-rungraph/src/: main.rs  pat.rs  pkgs.rs
crates/yzix-client/: Cargo.toml
crates/yzix-client/src/: lib.rs
crates/yzix-core/: Cargo.toml
crates/yzix-core/proptest-regressions/: hash.txt
crates/yzix-core/src/: dump.rs  hash.rs  lib.rs  regular.rs  semitree.rs  ser_trait.rs  store_utils.rs  stree.rs  strwrappers.rs  thintree.rs  visit_bytes.rs  wi.rs
crates/yzix-gc/: Cargo.toml
crates/yzix-gc/src/: main.rs
crates/yzix-pool/: Cargo.toml
crates/yzix-pool/src/: lib.rs
crates/yzix-proto/: Cargo.toml  README.md
crates/yzix-proto-core/: Cargo.toml
crates/yzix-proto-core/src/: lib.rs  strwrappers.rs  wi.rs
crates/yzix-proto/src/: codec.rs  lib.rs  wi.rs
crates/yzix-ser-trait/: Cargo.toml
crates/yzix-ser-trait/src/: lib.rs  padding.rs
crates/yzix-server/: Cargo.toml  README.md
crates/yzix-server/src/: clients.rs  fwi.rs  in2_helpers.rs  main.rs  route.rs  utils.rs
crates/yzix-store/: Cargo.toml
crates/yzix-store-builder/: Cargo.toml  README.md
crates/yzix-store-builder/src/: fwi.rs  handle_process.rs  handle_submit_task.rs  in2_helpers.rs  lib.rs  store_refs.rs  utils.rs
crates/yzix-store-refs/: Cargo.toml
crates/yzix-store-refs/src/: lib.rs
crates/yzix-store/src/: dump.rs  hash.rs  lib.rs  ser_trait.rs
crates/yzix-strwrappers/: Cargo.toml
crates/yzix-strwrappers/src/: lib.rs
crates/yzix-visit-bytes/: Cargo.toml
crates/yzix-visit-bytes/src/: lib.rs
docs/: API_PROPOSAL.md
docs/rungraph/bootstrap/: pkgs.toml
docs/rungraph/bootstrap/stage0/: mkwrappers.sh  pkgs.yrg
docs/rungraph/bootstrap/stage1/: buildscript-gcc.sh  buildscript-glibc.sh  buildscript-kernel-headers.sh  buildscript-perl.sh  buildscript-python-3.10.sh  gnu-generic.sh  mkDerivation-builder.sh  mkbuildsh.sh
