[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.dependencies.camino]
version = "1.1"
features = ["serde1"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "=0.12.4"
default-features = false
features = ["http2", "json", "rustls-tls"]

[workspace.dependencies.visit-bytes]
version = "0.1"
features = ["camino"]

[profile.release]
codegen-units = 1
debug = 1
lto = "thin"
