[package]
name = "example-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
camino = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indoc = "1.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.17"
features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt",
  "signal",
  "sync"
]

[dependencies.yzix-client]
path = "../yzix-client"
