[package]
name = "example-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
camino = "1.1"
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indoc = "2.0"

[dependencies.tokio]
version = "1.39"
features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt",
  "signal",
  "sync"
]

[dependencies.yzix-client]
path = "../yzix-client"
