[package]
name = "example-fetch2store"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.clap]
version = "3.1"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.20"
features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt",
  "signal",
  "sync"
]

[dependencies.yzix-client]
path = "../yzix-client"
