[package]
name = "example-fetch2store"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.32"
features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt",
  "signal",
  "sync"
]

[dependencies.yzix-client]
path = "../yzix-client"
