[package]
name = "example-fetch2store"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1"
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.tokio]
version = "1.39"
features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt",
  "signal",
  "sync"
]

[dependencies.yzix-client]
path = "../yzix-client"
