[package]
name = "yzix-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"

[dependencies.futures-util]
version = "0.3"
features = ["sink"]

[dependencies.hyper]
version = "0.14"
features = [
  "client",
  "http2",
  "runtime",
  "tcp"
]

[dependencies.tokio]
version = "1.20"
features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "sync"
]

[dependencies.yzix-proto]
path = "../yzix-proto"
