[package]
name = "yzix-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
blake2 = "0.10"
filetime = "0.2"
once_cell = "1.10"
thiserror = "1.0"
serde_bytes = "0.11"
yzb64 = "0.1"

[dependencies.camino]
version = "1.0"
features = ["serde1"]

[dependencies.digest]
version = "0.10"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[target.'cfg(unix)'.dependencies]
xattr = "0.2"

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[dev-dependencies.proptest]
version = "1.0"
default-features = false
features = ["std"]
