[package]
name = "yzix-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
blake2 = "0.10"
camino.workspace = true
filetime = "0.2"
once_cell = "1.19"
thiserror = "1.0"
serde.workspace = true
serde_bytes = "0.11"
visit-bytes.workspace = true
yzb64 = "0.1.1"

[dependencies.digest]
version = "0.10"
default-features = false

[target.'cfg(unix)'.dependencies]
xattr = "1.3"

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[dev-dependencies.proptest]
version = "1.5"
default-features = false
features = ["std"]
