[package]
name = "yzix-gc"
description = "Yzix store garbage collector"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
camino = "1.1"
fs2 = "0.4"
path-clean = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.3"

[dependencies.clap]
version = "4.3"
features = ["derive"]

[dependencies.yzix-core]
path = "../yzix-core"

[dependencies.yzix-store-builder]
path = "../yzix-store-builder"
