[package]
name = "yzix-gc"
description = "Yzix store garbage collector"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
camino.workspace = true
fs2 = "0.4"
path-clean = "1.0"
tracing.workspace = true
tracing-subscriber = "0.3"
visit-bytes.workspace = true
walkdir = "2.5"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.yzix-core]
path = "../yzix-core"

[dependencies.yzix-store-builder]
path = "../yzix-store-builder"
