[package]
name = "yzix-proto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
bincode = "1.3"
bytes = "1.1"
futures-core = "0.3"
futures-sink = "0.3"
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive", "std"]

[dependencies.tokio]
version = "1.17"

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dependencies.yzix-proto-core]
path = "../yzix-proto-core"
