[package]
name = "yzix-server"
description = "Yzix server executable, wraps the store-builder task"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
hyper-staticfile = "0.9"
num_cpus = "1.16"
serde.workspace = true
serde_json = "1.0"
tokio-stream = "0.1"
toml = "0.7"
tracing.workspace = true

[dependencies.futures-util]
version = "0.3"

[dependencies.hyper]
version = "0.14"
features = [
  "http2",
  "runtime",
  "server",
  "stream",
  "tcp"
]

[dependencies.tokio]
version = "1.39"
features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync"
]

[dependencies.tracing-subscriber]
version = "0.3"
features = [
  "env-filter"
]

[dependencies.yzix-core]
path = "../yzix-core"

[dependencies.yzix-store-builder]
path = "../yzix-store-builder"
