[package]
name = "yzix-server"
description = "Yzix server executable, wraps the store-builder task"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
bytes = "1.7.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper-staticfile = "0.10"
num_cpus = "1.16"
serde.workspace = true
serde_json = "1.0"
tokio-stream = "0.1"
toml = "0.8"
tracing.workspace = true

[dependencies.futures-util]
version = "0.3"

[dependencies.hyper]
version = "1.0"
features = [
  "http2",
  "server"
]

[dependencies.hyper-util]
version = "0.1"
features = [
  "http2",
  "server",
  "server-graceful",
  "service",
  "tokio"
]

[dependencies.tokio]
version = "1.39"
features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync"
]

[dependencies.tracing-subscriber]
version = "0.3"
features = [
  "env-filter"
]

[dependencies.yzix-core]
path = "../yzix-core"

[dependencies.yzix-store-builder]
path = "../yzix-store-builder"
