[package]
name = "yzix-store-builder"
description = "Yzix embeddable store build server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
async-channel = "1.6"
camino = "1.0"
oci-spec = "0.5"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
store-ref-scanner = "0.1"
tempfile = "3.3"
thiserror = "1.0"
tracing = "0.1"
tracing-futures = "0.2"

[dependencies.async-compression]
version = "0.3"
features = ["tokio", "zstd"]

[dependencies.lru]
version = "0.7"
default-features = false

[dependencies.tokio]
version = "1.17"
features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "sync"
]

[dependencies.yzix-core]
path = "../yzix-core"
