[package]
name = "yzix-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
base64 = "0.20.0-alpha.1"
blake2 = "0.10"
filetime = "0.2"
once_cell = "1.10"
thiserror = "1.0"

[dependencies.camino]
version = "1.0"
features = ["serde1"]

[dependencies.digest]
version = "0.10"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "std"]

[dependencies.yzix-visit-bytes]
path = "../yzix-visit-bytes"

[target.'cfg(unix)'.dependencies]
xattr = "0.2"

[dev-dependencies]
serde_test = "1.0"

[dev-dependencies.proptest]
version = "1.0"
default-features = false
features = ["std"]
